--- a/CleanPayroll.Apps.Cmd/CleanPayroll.Apps.Cmd.csproj
+++ b/CleanPayroll.Apps.Cmd/CleanPayroll.Apps.Cmd.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanPayroll.Core\CleanPayroll.Core.csproj" />
+  </ItemGroup>
+
 </Project>
