--- a/CleanPayroll.Apps.Cmd/CleanPayroll.Apps.Cmd.csproj
+++ b/CleanPayroll.Apps.Cmd/CleanPayroll.Apps.Cmd.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanPayroll.Core\CleanPayroll.Core.csproj" />
+    <ProjectReference Include="..\src\CleanPayroll.Data.SqlServer\CleanPayroll.Data.SqlServer.csproj" />
   </ItemGroup>
 
 </Project>
